Alignment fixed

--- a/components/pranamservice/Pranam.css
+++ b/components/pranamservice/Pranam.css
@@ -244,6 +244,9 @@
   font-size: large;
 }
 
+.Dates{
+  margin-top: 1.2rem;
+}
 
 @media (max-width: 992px){
   .button1{
